Closed
Bug 1130909
Opened 10 years ago
Closed 10 years ago
Fix compiling break in jsapi-tests for MIPS with debug
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox38 | --- | fixed |
People
(Reporter: hev, Assigned: hev)
References
Details
Attachments
(1 file)
1.20 KB,
patch
|
rankov
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:35.0) Gecko/20100101 Firefox/35.0
Build ID: 20150126171358
Steps to reproduce:
Compiling IonMonkey for MIPS on x86.
Errors:
/home/heiher/work/gecko-dev/js/src/jsapi-tests/testJitMoveEmitterCycles-mips.cpp: In member function ‘virtual bool cls_testJitMoveEmitterCycles_simple::run(JS::HandleObject)’:
/home/heiher/work/gecko-dev/js/src/jsapi-tests/testJitMoveEmitterCycles-mips.cpp:112:46: error: ‘linkAndAllocate’ was not declared in this scope
JitCode *code = linkAndAllocate(cx, &masm);
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8561134 -
Flags: review?(branislav.rankov)
Comment 2•10 years ago
|
||
Observe (https://bugzilla.mozilla.org/show_bug.cgi?id=1127781#c2) that when this is fixed the jsapi-tests still crash, though later than before.
Updated•10 years ago
|
Attachment #8561134 -
Flags: review?(branislav.rankov) → review+
Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Comment 3•10 years ago
|
||
Assignee: nobody → r
Keywords: checkin-needed
Comment 4•10 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in
before you can comment on or make changes to this bug.
Description
•