Bug 1130909 - IonMonkey: MIPS: Fix compiling break in jsapi-tests with debug. r=rankov